[core-java]Adding changes for streams